-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Server Programmability
-
Fully Compatible
-
ALL
-
Programmability 2025-04-14
-
None
-
None
-
None
-
None
-
None
-
None
-
None
GCC is correctly emitting warnings due to an uninitialized member in boost::optional. The fix in boost is available upstream. In advance of upgrading boost in SERVER-70000, silence the instance of the warning that's cropped up in idl_parser.h.
- related to
-
SERVER-70000 Upgrade boost from blackduck warning
-
- Closed
-