SERVER-103685 temporarily silence GCC -Wuninitialized warning about boost::optional (#34908)

GitOrigin-RevId: 5af61f090d11cd242bc70d274ac1dd7568c75abf